[package]
name = "ida_motor_stm"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.5"
defmt = "1.1.1"
defmt-rtt = "1.3.0"
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread", "defmt"] }
embassy-stm32 = { version = "0.6.0", features = ["stm32f103c8", "memory-x", "time-driver-any", "defmt"] }
embassy-sync = "0.8.0"
embassy-time = { version = "0.5.1", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embedded-hal = "1.0.0"
embedded-io-async = "0.7.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
static_cell = "2.1.1"
