[package]
name = "imu_ex"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
defmt = "1.1.0"
defmt-rtt = "1.2.0"
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread"] }
embassy-futures = "0.1.2"
embassy-rp = { version = "0.10.0", features = ["time-driver", "rp235xa", "critical-section-impl"] }
embassy-time = "0.5.1"
embassy-usb = "0.6.0"
embassy-usb-logger = "0.6.0"
log = "0.4.33"
panic-probe = "1.0.0"
